--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>Rémi A. Chou</h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/pic3.jpeg" alt="alt text" />&nbsp;</td>
+<img src="photos/pic4.jpg" alt="alt text" />&nbsp;</td>
 <td align="left"><p>Assistant Professor <br />
 
 
