--- a/group.html
+++ b/group.html
@@ -30,16 +30,20 @@
 </li>
 </ul>
 <ul>
-<li><p>Maryam Keshvari</p>
+<li><p>Abhisek Jha</p>
 </li>
 </ul>
 <ul>
-<li><p>Vidhi Rana </p>
+<li><p>Vidhi Rana</p>
 </li>
 </ul>
 <h2>Former Members</h2>
 <ul>
 <li><p>Rumia Sultana, Ph.D. 2023, joined <i>Embry-Riddle Aeronautical University</i> as an assistant professor</p>
+</li>
+</ul>
+<ul>
+<li><p>Maryam Keshvari, M.Sc. 2023, joined <i>Wichita State University</i> as a Ph.D. student</p>
 </li>
 </ul>
 <ul>
