--- a/publications.html
+++ b/publications.html
@@ -74,6 +74,8 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Distributed Storage Over a Public Channel: Trade-off between Privacy and Shared Key Lengths</b></a>,<br /> M. Keshvari, R. Chou, <br /> <i>Proc. of the 59th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;23</i>, Monticello, IL, Sep. 2023.<br /></p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10206726"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a><br />  R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;23</i>, Taipei, Taiwan, Jun. 2023.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10206773"><b>Secret Sharing over a Gaussian Broadcast Channel: Optimal Coding Scheme Design and Deep Learning Approach at Short Blocklength</b></a><br />  R. Sultana, V. Rana, R. Chou<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;23</i>, Taipei, Taiwan, Jun. 2023.<br /></p>
