--- a/group.html
+++ b/group.html
@@ -30,14 +30,18 @@
 </li>
 </ul>
 <ul>
-<li><p>Abhisek Jha</p>
+<li><p>David Miller</p>
 </li>
 </ul>
 <ul>
-<li><p>Vidhi Rana</p>
+<li><p>Abhisek Jha</p>
 </li>
 </ul>
 <h2>Former Members</h2>
+<ul>
+<li><p>Vidhi Rana, Ph.D. 2023, joined <i>The University of Texas at Arlington</i> as a postdoctoral researcher</p>
+</li>
+</ul>
 <ul>
 <li><p>Rumia Sultana, Ph.D. 2023, joined <i>Embry-Riddle Aeronautical University</i> as an assistant professor</p>
 </li>
@@ -47,7 +51,7 @@
 </li>
 </ul>
 <ul>
-<li><p>Srilekha Dodda, M.Sc. 2023, joined <i>Wichita State University</i> as a lecturer</p>
+<li><p>Srilekha Dodda, M.Sc. 2023, joined <i>University of North Carolina at Pembroke</i> as a lecturer</p>
 </li>
 </ul>
 <ul>
