--- a/publications.html
+++ b/publications.html
@@ -37,9 +37,9 @@
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a>,<br />  R. Chou<br /> Accepted to <i>IEEE Transactions on Information Theory</i>, 2024.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a>,<br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, to appear, 2024.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2308.12374"><b>Private Information Retrieval with Private Noisy Side Information</b></a>,<br />  H. ZivariFard, R. Chou<br /> Accepted to <i>IEEE Transactions on Information Theory</i>, 2024.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2308.12374"><b>Private Information Retrieval with Private Noisy Side Information</b></a>,<br />  H. ZivariFard, R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, to appear, 2024.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2206.03477"><b>Short Blocklength Wiretap Channel Codes via Deep Learning: Design and Performance Evaluation</b></a>,<br />  V. Rana, R. Chou<br /> <i>IEEE Transactions on Communications</i>, 71(3), Mar. 2023.<br /> </p>
 </li>
