--- a/group.html
+++ b/group.html
@@ -37,6 +37,14 @@
 <li><p>Abhisek Jha</p>
 </li>
 </ul>
+<ul>
+<li><p>Dr. Vidhi Rana</p>
+</li>
+</ul>
+<ul>
+<li><p>Dr. Salman Habib</p>
+</li>
+</ul>
 <h2>Former Members</h2>
 <ul>
 <li><p>Vidhi Rana, Ph.D. 2023, joined <i>The University of Texas at Arlington</i> as a postdoctoral researcher</p>
