--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a>,<br />  R. Chou, J. Kliewer <br /> <i>IEEE Transactions on Information Theory</i>, to appear, 2024.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2403.10676"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a>,<br />  R. Chou, J. Kliewer <br /> <i>IEEE Transactions on Information Theory</i>, to appear, 2024.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a>,<br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 70(4), Apr. 2024.<br /></p>
 </li>
@@ -77,6 +77,8 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Short Blocklength Secret Coding via Helper-Assisted Learning over the Wiretap Channel</b></a>,<br /> V. Rana, R. Chou, T. Kim <br /> <i>Proc. of the IEEE International Conference on Communications</i>, Denver, CO, Jun. 2024.<br /></p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10313393"><b>Distributed Storage Over a Public Channel: Trade-off between Privacy and Shared Key Lengths</b></a>,<br /> M. Keshvari, R. Chou <br /> <i>Proc. of the 59th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;23</i>, Monticello, IL, Sep. 2023.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10206726"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a>,<br />  R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;23</i>, Taipei, Taiwan, Jun. 2023.<br /></p>
