--- a/group.html
+++ b/group.html
@@ -45,25 +45,56 @@
 <li><p>Dr. Salman Habib</p>
 </li>
 </ul>
+<ul>
+<li><p>Dr. Vamoua Yachongka</p>
+</li>
+</ul>
 <h2>Former Members</h2>
+<ul>
+<li><p>Postdocs</p>
+<ul>
+<li><p>Dr. Hassan ZivariFard, postdoctoral researcher 2022, joined <i>Columbia University</i> as a postdoctoral researcher</p>
+</li>
+</ul>
+
+</li>
+</ul>
+<ul>
+<li><p>Ph.D. Students</p>
 <ul>
 <li><p>Vidhi Rana, Ph.D. 2023, joined <i>The University of Texas at Arlington</i> as a postdoctoral researcher</p>
 </li>
-</ul>
-<ul>
 <li><p>Rumia Sultana, Ph.D. 2023, joined <i>Embry-Riddle Aeronautical University</i> as an assistant professor</p>
 </li>
 </ul>
+
+</li>
+</ul>
+<ul>
+<li><p>M.Sc. Students</p>
 <ul>
 <li><p>Maryam Keshvari, M.Sc. 2023, joined <i>Wichita State University</i> as a Ph.D. student</p>
 </li>
-</ul>
-<ul>
 <li><p>Srilekha Dodda, M.Sc. 2023, joined <i>University of North Carolina at Pembroke</i> as a lecturer</p>
 </li>
 </ul>
+
+</li>
+</ul>
 <ul>
-<li><p>Dr. Hassan ZivariFard, postdoctoral researcher 2022, joined <i>Columbia University</i> as a postdoctoral researcher</p>
+<li><p>Undergraduate Students</p>
+<ul>
+<li><p>Carson Wang (NSF REU, Summer 2019)</p>
+</li>
+<li><p>Christopher Gravelle (NSF REU, Summer 2019)
+</p>
+</li>
+<li><p>Ezekiel Kuenzi (NSF REU, Summer 2018)</p>
+</li>
+<li><p>Christopher Hess (NSF REU, Summer 2018)</p>
+</li>
+</ul>
+
 </li>
 </ul>
 </td>
