--- a/publications.html
+++ b/publications.html
@@ -25,17 +25,19 @@
 
 </p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Secret Sharing over a Gaussian Broadcast Channel: Optimal Coding Scheme Design and Deep Learning Approach at Short Blocklength</b></a>,<br />  R. Sultana, V.Rana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, May 2024.<br /> </p>
+</li>
 <li><p><a href="publications.html"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a>,<br />  H. ZivariFard, R. Chou<br /> submitted to <i>IEEE Journal on Selected Areas in Information Theory</i>, Dec. 2023.<br /></p>
 </li>
 <li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2023.<br /></p>
-</li>
-<li><p><a href="publications.html"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2023.<br /></p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="https://arxiv.org/abs/2403.10676"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a>,<br />  R. Chou, J. Kliewer <br /> <i>IEEE Transactions on Information Theory</i>, to appear, 2024.<br /></p>
+<li><p><a href="publications.html"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2403.10676"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a>,<br />  R. Chou, J. Kliewer <br /> <i>IEEE Transactions on Information Theory</i>, 70(5), May 2024.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2110.10307"><b>Distributed Secret Sharing over a Public Channel from Correlated Random Variables</b></a>,<br />  R. Chou<br /> <i>IEEE Transactions on Information Theory</i>, 70(4), Apr. 2024.<br /></p>
 </li>
@@ -77,6 +79,12 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Dual-Source Symmetric PIR without Data Replication or Shared Randomness</b></a>,<br />  R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>The Capacity of Symmetric Private Information Retrieval with Private Noisy Side Information</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Private Sum Computation: Trade-Off between Shared Randomness and Privacy</b></a>,<br />  R. Chou, J. Kliewer, A. Yener<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
+</li>
 <li><p><a href="publications.html"><b>Short Blocklength Secret Coding via Helper-Assisted Learning over the Wiretap Channel</b></a>,<br /> V. Rana, R. Chou, T. Kim <br /> <i>Proc. of the IEEE International Conference on Communications</i>, Denver, CO, Jun. 2024.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10313393"><b>Distributed Storage Over a Public Channel: Trade-off between Privacy and Shared Key Lengths</b></a>,<br /> M. Keshvari, R. Chou <br /> <i>Proc. of the 59th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;23</i>, Monticello, IL, Sep. 2023.<br /></p>
