--- a/publications.html
+++ b/publications.html
@@ -27,14 +27,14 @@
 <ol reversed>
 <li><p><a href="publications.html"><b>Secret Sharing over a Gaussian Broadcast Channel: Optimal Coding Scheme Design and Deep Learning Approach at Short Blocklength</b></a>,<br />  R. Sultana, V.Rana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, May 2024.<br /> </p>
 </li>
-<li><p><a href="publications.html"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a>,<br />  H. ZivariFard, R. Chou<br /> submitted to <i>IEEE Journal on Selected Areas in Information Theory</i>, Dec. 2023.<br /></p>
-</li>
 <li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2023.<br /></p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a>,<br />  H. ZivariFard, R. Chou<br /> to appear in <i>IEEE Journal on Selected Areas in Information Theory</i>.<br /></p>
+</li>
 <li><p><a href="publications.html"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2403.10676"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a>,<br />  R. Chou, J. Kliewer <br /> <i>IEEE Transactions on Information Theory</i>, 70(5), May 2024.<br /></p>
