--- a/publications.html
+++ b/publications.html
@@ -35,7 +35,7 @@
 <ol reversed>
 <li><p><a href="publications.html"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a>,<br />  H. ZivariFard, R. Chou<br /> to appear in <i>IEEE Journal on Selected Areas in Information Theory</i>.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2406.04521"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2403.10676"><b>Secure Distributed Storage: Optimal Trade-Off Between Storage Rate and Privacy Leakage</b></a>,<br />  R. Chou, J. Kliewer <br /> <i>IEEE Transactions on Information Theory</i>, 70(5), May 2024.<br /></p>
 </li>
