--- a/publications.html
+++ b/publications.html
@@ -59,11 +59,11 @@
 </li>
 <li><p><a href="https://arxiv.org/abs/1808.05612"><b>Universal Covertness for Discrete Memoryless Sources</b></a>,<br /> R. Chou, M. Bloch, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 67(8), Aug. 2021. <br /></p>
 </li>
-<li><p><a href="http://wcan.ee.psu.edu/papers/RC_TIT_20.pdf"><b>Strongly Secure Multiuser Communication and Authentication with Anonymity Constraints</b></a>,<br /> R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 66(1), Jan. 2020. <br /></p>
+<li><p><a href="https://www.researchgate.net/publication/336351866_Strongly_Secure_Multiuser_Communication_and_Authentication_With_Anonymity_Constraints"><b>Strongly Secure Multiuser Communication and Authentication with Anonymity Constraints</b></a>,<br /> R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 66(1), Jan. 2020. <br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/1710.04643"><b>Secret-Key Generation in Many-to-One Networks: An Integrated Game-Theoretic and Information-Theoretic Approach</b></a>,<br /> R. Chou, A. Yener<br /> <i>IEEE Transactions on Information Theory</i>, 65(8), Aug. 2019.<br /></p>
 </li>
-<li><p><a href="http://wcan.ee.psu.edu/papers/RC_TIT_18.pdf"><b>Polar Coding for the Multiple Access Wiretap Channel via Rate-Splitting and Cooperative Jamming</b></a>,<br /> R. Chou, A. Yener<br /> <i>IEEE Transactions on Information Theory</i>, 64(12), Dec. 2018.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/327065752_Polar_Coding_for_the_Multiple_Access_Wiretap_Channel_via_Rate-Splitting_and_Cooperative_Jamming"><b>Polar Coding for the Multiple Access Wiretap Channel via Rate-Splitting and Cooperative Jamming</b></a>,<br /> R. Chou, A. Yener<br /> <i>IEEE Transactions on Information Theory</i>, 64(12), Dec. 2018.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/1608.08474"><b>Empirical and Strong Coordination via Soft Covering with Polar Codes</b></a>,<br /> R. Chou, M. Bloch, J. Kliewer<br /> <i>IEEE Transactions on Information Theory</i>, 64(7), Jul. 2018.<br /></p>
 </li>
