--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="https://arxiv.org/abs/2406.04521"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> to appear in <i>IEEE Transactions on Information Theory</i>.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2406.04521"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 70(10), Oct. 2024.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2407.20901"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a>,<br />  H. ZivariFard, R. Chou<br />  <i>IEEE Journal on Selected Areas in Information Theory</i>, 5, Jun. 2024.<br /></p>
 </li>
@@ -79,13 +79,13 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Dual-Source Symmetric PIR without Data Replication or Shared Randomness</b></a>,<br />  R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/10619444"><b>Dual-Source Symmetric PIR without Data Replication or Shared Randomness</b></a>,<br />  R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>The Capacity of Symmetric Private Information Retrieval with Private Noisy Side Information</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/10619115"><b>The Capacity of Symmetric Private Information Retrieval with Private Noisy Side Information</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Private Sum Computation: Trade-Off between Shared Randomness and Privacy</b></a>,<br />  R. Chou, J. Kliewer, A. Yener<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/10619082"><b>Private Sum Computation: Trade-Off between Shared Randomness and Privacy</b></a>,<br />  R. Chou, J. Kliewer, A. Yener<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Short Blocklength Secret Coding via Helper-Assisted Learning over the Wiretap Channel</b></a>,<br /> V. Rana, R. Chou, T. Kim <br /> <i>Proc. of the IEEE International Conference on Communications</i>, Denver, CO, Jun. 2024.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/10623082"><b>Short Blocklength Secret Coding via Helper-Assisted Learning over the Wiretap Channel</b></a>,<br /> V. Rana, R. Chou, T. Kim <br /> <i>Proc. of the IEEE International Conference on Communications</i>, Denver, CO, Jun. 2024.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10313393"><b>Distributed Storage Over a Public Channel: Trade-off between Privacy and Shared Key Lengths</b></a>,<br /> M. Keshvari, R. Chou <br /> <i>Proc. of the 59th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;23</i>, Monticello, IL, Sep. 2023.<br /></p>
 </li>
