--- a/group.html
+++ b/group.html
@@ -11,7 +11,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Rémi A. Chou</div>
+<div class="menu-category">Rémi Chou</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-item"><a href="publications.html">Publications</a></div>
