--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Rémi A. Chou</h1>
+<h1>Rémi Chou</h1>
 </div>
 <table class="imgtable"><tr><td>
 <img src="photos/pic4.jpg" alt="alt text" />&nbsp;</td>
