--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Rémi Chou</div>
+<div class="menu-category">Rémi A. Chou</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="group.html">Group</a></div>
 <div class="menu-item"><a href="publications.html" class="current">Publications</a></div>
@@ -23,9 +23,13 @@
 <h2>Preprints</h2>
 <p><br />
 
+
+
 </p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Secret Sharing over a Gaussian Broadcast Channel: Optimal Coding Scheme Design and Deep Learning Approach at Short Blocklength</b></a>,<br />  R. Sultana, V.Rana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, May 2024.<br /> </p>
+<li><p><a href="https://arxiv.org/abs/2411.05987"><b>Multiuser Commitment over Noisy Channels</b></a>,<br />  R. Chou, M. Bloch<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2024.<br /> </p>
+</li>
+<li><p><a href="publications.html"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jul. 2024.<br /></p>
 </li>
 <li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2023.<br /></p>
 </li>
@@ -79,6 +83,10 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="https://ieeexplore.ieee.org/abstract/document/10735295"><b>SPIR with Colluding and Non-Replicated Servers from a Noisy Channel</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 60th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;24</i>, Monticello, IL, Sep. 2024.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/abstract/document/10735263"><b>Distributed Matrix Multiplication: Download Rate, Randomness and Privacy Trade-Offs</b></a>,<br /> A. Morteza, R. Chou <br /> <i>Proc. of the 60th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;24</i>, Monticello, IL, Sep. 2024.<br /></p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10619444"><b>Dual-Source Symmetric PIR without Data Replication or Shared Randomness</b></a>,<br />  R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/10619115"><b>The Capacity of Symmetric Private Information Retrieval with Private Noisy Side Information</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;24</i>, Athens, Greece, Jul. 2024.<br /></p>
