--- a/publications.html
+++ b/publications.html
@@ -24,9 +24,12 @@
 <p><br />
 
 
-
 </p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Dec. 2024.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br /> submitted to <i>IEEE Transactions on Communications</i>, Dec. 2024.<br /></p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2411.05987"><b>Multiuser Commitment over Noisy Channels</b></a>,<br />  R. Chou, M. Bloch<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2024.<br /> </p>
 </li>
 <li><p><a href="publications.html"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jul. 2024.<br /></p>
