--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,8 @@
 
 </p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2025.<br /></p>
+</li>
 <li><p><a href="publications.html"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Dec. 2024.<br /></p>
 </li>
 <li><p><a href="publications.html"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br /> submitted to <i>IEEE Transactions on Communications</i>, Dec. 2024.<br /></p>
@@ -34,12 +36,12 @@
 </li>
 <li><p><a href="publications.html"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jul. 2024.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2023.<br /></p>
-</li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71, 2025.<br /></p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2406.04521"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 70(10), Oct. 2024.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2407.20901"><b>Secure Source Coding Resilient Against Compromised Users via an Access Structure</b></a>,<br />  H. ZivariFard, R. Chou<br />  <i>IEEE Journal on Selected Areas in Information Theory</i>, 5, Jun. 2024.<br /></p>
@@ -86,6 +88,10 @@
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="https://ieeexplore.ieee.org/abstract/document/10807012"><b>Covert Communication with Positive Rate Over State-Dependent Quantum Channels</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;24</i>, Shenzen, China, Nov. 2024.<br /></p>
+</li>
+<li><p><a href="https://ieeexplore.ieee.org/abstract/document/10806941"><b>Secret-Key Generation with PUFs and Biometric Identifiers for Compound Authentication Channels</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;24</i>, Shenzen, China, Nov. 2024.<br /></p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10735295"><b>SPIR with Colluding and Non-Replicated Servers from a Noisy Channel</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 60th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;24</i>, Monticello, IL, Sep. 2024.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10735263"><b>Distributed Matrix Multiplication: Download Rate, Randomness and Privacy Trade-Offs</b></a>,<br /> A. Morteza, R. Chou <br /> <i>Proc. of the 60th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;24</i>, Monticello, IL, Sep. 2024.<br /></p>
