--- a/group.html
+++ b/group.html
@@ -22,6 +22,14 @@
 </div>
 <h2>Current Members</h2>
 <ul>
+<li><p>Amir Ali Belbasi</p>
+</li>
+</ul>
+<ul>
+<li><p>David Miller</p>
+</li>
+</ul>
+<ul>
 <li><p>Amirhosein Morteza</p>
 </li>
 </ul>
@@ -30,19 +38,7 @@
 </li>
 </ul>
 <ul>
-<li><p>David Miller</p>
-</li>
-</ul>
-<ul>
-<li><p>Abhisek Jha</p>
-</li>
-</ul>
-<ul>
 <li><p>Dr. Vidhi Rana</p>
-</li>
-</ul>
-<ul>
-<li><p>Dr. Salman Habib</p>
 </li>
 </ul>
 <ul>
@@ -53,6 +49,8 @@
 <ul>
 <li><p>Postdocs</p>
 <ul>
+<li><p>Dr. Salman Habib, postdoctoral researcher 2024, joined <i>Arizona State University</i> as a postdoctoral researcher</p>
+</li>
 <li><p>Dr. Hassan ZivariFard, postdoctoral researcher 2022, joined <i>Columbia University</i> as a postdoctoral researcher</p>
 </li>
 </ul>
@@ -84,6 +82,8 @@
 <ul>
 <li><p>Undergraduate Students</p>
 <ul>
+<li><p>Abhisek Jha (NSF Convergence Accelerator Track G,  2023 -  2024)</p>
+</li>
 <li><p>Carson Wang (NSF REU, Summer 2019)</p>
 </li>
 <li><p>Christopher Gravelle (NSF REU, Summer 2019)
