--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,9 @@
 
 </p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Private Sum Computation: Trade-Offs between
+Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Feb. 2025.<br /></p>
+</li>
 <li><p><a href="publications.html"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2025.<br /></p>
 </li>
 <li><p><a href="publications.html"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Dec. 2024.<br /></p>
