--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@ Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Ye
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71, 2025.<br /></p>
+<li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(3), Mar. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2406.04521"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 70(10), Oct. 2024.<br /></p>
 </li>
