--- a/publications.html
+++ b/publications.html
@@ -23,9 +23,12 @@
 <h2>Preprints</h2>
 <p><br />
 
-
 </p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2025.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Mar. 2025.<br /> </p>
+</li>
 <li><p><a href="publications.html"><b>Private Sum Computation: Trade-Offs between
 Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Yener <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Feb. 2025.<br /></p>
 </li>
@@ -43,7 +46,7 @@ Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Ye
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(3), Mar. 2025.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/388045607_Private_Noisy_Side_Information_Helps_to_Increase_the_Capacity_of_SPIR"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(3), Mar. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2406.04521"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 70(10), Oct. 2024.<br /></p>
 </li>
