--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
 
 </p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2025.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2503.14682"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Mar. 2025.<br /> </p>
 </li>
