--- a/publications.html
+++ b/publications.html
@@ -25,6 +25,8 @@
 
 </p>
 <ol reversed>
+<li><p><a href="https://arxiv.org/abs/2505.04076"><b>Secret Sharing Schemes from Correlated Random Variables and Rate-Limited Public Communication</b></a>,<br />  R. Sultana, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, May 2025.<br /></p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2503.14682"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Mar. 2025.<br /> </p>
@@ -34,18 +36,18 @@ Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Ye
 </li>
 <li><p><a href="publications.html"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jan. 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br /> submitted to <i>IEEE Transactions on Information Theory</i>, Dec. 2024.<br /></p>
-</li>
 <li><p><a href="publications.html"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br /> submitted to <i>IEEE Transactions on Communications</i>, Dec. 2024.<br /></p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2411.05987"><b>Multiuser Commitment over Noisy Channels</b></a>,<br />  R. Chou, M. Bloch<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Nov. 2024.<br /> </p>
-</li>
-<li><p><a href="publications.html"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Jul. 2024.<br /></p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2411.05987"><b>Multiuser Commitment over Noisy Channels</b></a>,<br />  R. Chou, M. Bloch<br /> <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+</li>
 <li><p><a href="https://www.researchgate.net/publication/388045607_Private_Noisy_Side_Information_Helps_to_Increase_the_Capacity_of_SPIR"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(3), Mar. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2406.04521"><b>The Gaussian Multiple Access Wiretap Channel with Selfish Transmitters: A Coalitional Game Theory Perspective</b></a>,<br />  R. Chou, A. Yener <br /> <i>IEEE Transactions on Information Theory</i>, 70(10), Oct. 2024.<br /></p>
@@ -94,6 +96,28 @@ Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Ye
 <h2>Conference Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Minimax Data Sanitization with Distortion Constraint and Adversarial Inference</b></a>,<br /> A. Moatazedian, Y. Yakimenka, R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;25</i>, Sydney, Australia, Oct. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Improved Achievable Rate for Single Server SPIR over BEC</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Single-Server SPIR over Binary Erasure Channels: Benefits of Noisy Side Information</b></a>,<br /> A. Shekofteh, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>An Achievable Rate Region for Hypothesis Testing and User Identification with Multiple Sources</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Regionally Robust Autoencoder-Based Channel Codes</b></a>,<br /> A. Belbasi, R. Chou <br /> <i>Proc. of the 61st Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;25</i>, Urbana, IL, Sep. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Joint Covert Communication and Covert Secret Key Generation via Causal CSI</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Covert Communication Over a Quantum MAC With a Helper</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Privacy-Constrained Lossy Function Computation in Distributed Databases</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Constrained Optimization of Access Functions in Uniform Secret Sharing</b></a>,<br /> A. Morteza, R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Sequential Interval Passing for Compressed Sensing</b></a>,<br /> S. Habib, R. Chou, T. Kim <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+</li>
+<li><p><a href="publications.html"><b>Secret Sharing Over a Two Receiver Classical-Quantum Broadcast Channel</b></a>,<br /> T. Welling, R. Chou, A. Yener <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;25</i>, Ann Arbor, MI, Jun. 2025.<br /></p>
+</li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10807012"><b>Covert Communication with Positive Rate Over State-Dependent Quantum Channels</b></a>,<br /> H. ZivariFard, R. Chou, X. Wang <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;24</i>, Shenzen, China, Nov. 2024.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/abstract/document/10806941"><b>Secret-Key Generation with PUFs and Biometric Identifiers for Compound Authentication Channels</b></a>,<br /> V. Yachongka, R. Chou <br /> <i>Proc. of the IEEE Information Theory Workshop, ITW&rsquo;24</i>, Shenzen, China, Nov. 2024.<br /></p>
@@ -144,7 +168,7 @@ Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Ye
 </li>
 <li><p><a href="https://arxiv.org/abs/2001.04241"><b>Secure Distributed Storage: Rate-Privacy Trade-Off and XOR-Based Coding Scheme</b></a>,<br /> R. Chou, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;20</i>, Los Angeles, CA, Jun. 2020.<br /></p>
 </li>
-<li><p><a href="papers\allerton19.pdf"><b>Explicit Low-complexity Codes for Multiple Access Channel Resolvability</b></a>,<br /> R. Sultana, R. Chou <br /> <i>Proc. of the 57th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;19</i>, Monticello, IL, Sep. 2019.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/337790818_Explicit_Low-complexity_Codes_for_Multiple_Access_Channel_Resolvability"><b>Explicit Low-complexity Codes for Multiple Access Channel Resolvability</b></a>,<br /> R. Sultana, R. Chou <br /> <i>Proc. of the 57th Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;19</i>, Monticello, IL, Sep. 2019.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/8849439"><b>Biometric Systems with Multiuser Access Structures</b></a>,<br /> R. Chou <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;19</i>, Paris, France, Jul. 2019.<br /></p>
 </li>
@@ -168,7 +192,7 @@ Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Ye
 </li>
 <li><p><a href="http://ieeexplore.ieee.org/document/7541446/"><b>Polar Coding for the Multiple Access Wiretap Channel via Rate-Splitting and Cooperative Jamming</b></a>,<br /> R. Chou, A. Yener <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;16</i>, Barcelona, Spain, Jul. 2016.<br /></p>
 </li>
-<li><p><a href="papers\allerton15.pdf"><b>Using Deterministic Decisions for Low-Entropy Bits in the Encoding and Decoding of Polar Codes</b></a>,<br /> R. Chou, M. Bloch <br /> <i>Proc. of the 53rd Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;15</i>, Monticello, IL, Oct. 2015.<br /></p>
+<li><p><a href="https://www.researchgate.net/publication/304233555_Using_deterministic_decisions_for_low-entropy_bits_in_the_encoding_and_decoding_of_polar_codes"><b>Using Deterministic Decisions for Low-Entropy Bits in the Encoding and Decoding of Polar Codes</b></a>,<br /> R. Chou, M. Bloch <br /> <i>Proc. of the 53rd Annual Allerton Conference on Communication, Control, and Computing, Allerton&rsquo;15</i>, Monticello, IL, Oct. 2015.<br /></p>
 </li>
 <li><p><a href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7282708"><b>Polar Coding for Empirical and Strong Coordination via Distribution Approximation</b></a>,<br /> R. Chou, M. Bloch, J. Kliewer <br /> <i>Proc. of the IEEE International Symposium on Information Theory, ISIT&rsquo;15</i>, Hong Kong, Jun. 2015.<br /></p>
 </li>
