--- a/publications.html
+++ b/publications.html
@@ -42,11 +42,11 @@ Communication, Randomness, and Privacy</b></a>,<br /> R. Chou, J. Kliewer, A. Ye
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
-<li><p><a href="publications.html"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2411.05987"><b>Multiuser Commitment over Noisy Channels</b></a>,<br />  R. Chou, M. Bloch<br /> <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
 </li>
-<li><p><a href="publications.html"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11127115"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> <i>IEEE Transactions on Information Theory</i>, 71(10), Oct. 2025.<br /></p>
 </li>
 <li><p><a href="https://www.researchgate.net/publication/388045607_Private_Noisy_Side_Information_Helps_to_Increase_the_Capacity_of_SPIR"><b>Private Noisy Side Information Helps to Increase the Capacity of SPIR</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 71(3), Mar. 2025.<br /></p>
 </li>
