--- a/publications.html
+++ b/publications.html
@@ -31,18 +31,19 @@
 <li><p><a href="https://arxiv.org/abs/2503.14682"><b>Dual-Source SPIR over a noiseless MAC without Data Replication or Shared Randomness</b></a>,<br />  R. Chou<br /> submitted to <i>IEEE Transactions on Information Theory</i>, Mar. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2503.08632"><b>Secret-Key Generation from Private Identifiers under Channel Uncertainty</b></a>,<br />  V. Yachongka, R. Chou<br /> submitted to <i>IEEE Transactions on Information Forensics and Security</i>, Mar. 2025.<br /> 
-
 </p>
 </li>
 </ol reversed>
 <h2>Journal Papers</h2>
 <p><br /></p>
 <ol reversed>
+<li><p><a href="publications.html"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 2025.<br /></p>
+</li>
 <li><p><a href="publications.html"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 71(11), Nov. 2025.<br /></p>
 </li>
-<li><p><a href="https://arxiv.org/abs/2411.05987"><b>Multiuser Commitment over Noisy Channels</b></a>,<br />  R. Chou, M. Bloch<br /> <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+<li><p><a href="https://arxiv.org/abs/2411.05987"><b>Multiuser Commitment over Noisy Channels</b></a>,<br />  R. Chou, M. Bloch<br /> <i>IEEE Transactions on Information Theory</i>, 71(11), Nov. 2025.<br /></p>
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/11127115"><b>Reduced Complexity Interval Passing for Sparse Signal Recovery</b></a>,<br />  S. Habib, R. Chou, T. Kim<br /> <i>IEEE Transactions on Information Theory</i>, 71(10), Oct. 2025.<br /></p>
 </li>
