--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
 </li>
 <li><p><a href="https://ieeexplore.ieee.org/document/11214171"><b>Helper-Assisted Coding for Gaussian Wiretap Channels: Deep Learning Meets PhySec</b></a>,<br />  V. Rana, R. Chou, T. Kim<br />  <i>IEEE Transactions on Communications</i>, 2025.<br /></p>
 </li>
-<li><p><a href="https://ieeexplore.ieee.org/document/11173671"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, 2025.<br /></p>
+<li><p><a href="https://ieeexplore.ieee.org/document/11173671"><b>Covert Communication and Key Generation Over Quantum State-Dependent Channels</b></a>,<br />  H. ZivariFard, R. Chou, X. Wang<br /> <i>IEEE Transactions on Information Theory</i>, , 71(12), Dec. 2025.<br /></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2201.11891"><b>Function Computation Without Secure Links: Information and Leakage Rates</b></a>,<br /> R. Chou, J. Kliewer <br />  <i>IEEE Transactions on Information Theory</i>, 71(11), Nov. 2025.<br /></p>
 </li>
